Closed Bug 1956233 Opened 1 year ago Closed 1 year ago

dom.timeout.defer_during_load.force-disable checked more than it should

Categories

(Core :: Performance: General, defect)

defect

Tracking

()

RESOLVED FIXED
138 Branch
Tracking Status
thunderbird_esr128 --- unaffected
firefox-esr128 --- unaffected
firefox138 --- fixed

People

(Reporter: mkmelin, Assigned: mkmelin)

References

Details

Attachments

(1 file)

After bug 1955495 Thunderbird a test started failing:
TEST-UNEXPECTED-FAIL | comm/mail/base/test/performance/browser_preferences_usage.js | dom.timeout.defer_during_load.force-disable should not be accessed more than 40 times. - 92 <= 40 -

Geoff had a suggestion in bug 1955495 comment 4.

Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Pushed by rjesup@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f68aff9e4c81 avoid getting URI prefs when not contentprincipal. r=jesup
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 138 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: