Bug 1956233 - avoid getting URI prefs when not contentprincipal. r=jesup

Differential Revision: https://phabricator.services.mozilla.com/D242919